feat: download and reuse Windows runtime